new writing method, less double quotes

--- a/remote.html
+++ b/remote.html
@@ -244,7 +244,7 @@
                 <span class="fa fa-fw fa-spinner fa-pulse"></span>
                 <!-- <span class="text">%%TRANSLATE:LOADING%%</span> -->
             </div>
-            <div id="error" class="status-indicator">
+            <div id="error" class="status-indicator button">
                 <span class="fa fa-fw fa-exclamation-circle"></span>
                 <!-- <span class="text">%%TRANSLATE:ERROR%%</span> -->
             </div>
